

  ChangeLog.txt for libSUFR
  
   57: 17/10/2011:  *** SF release v0.2.1 ***
     - added version number to Doxygen documentation
     - 5059 lines of code
   
   56: 17/10/2011:
     - SF release v0.2.0, not recognised by SF
   
   55: 14/10/2011:
     - Updated CMake: make including compiler name in libs and module dir optional;
       use the option -DCOMPILER_SPECIFIC_LIBS=on to create compiler-dependent files
   
******************************************************************************************
   54: 10/10/2011:  *** SF release v0.1.9 ***
     - 5059 lines of code
     
   53: 10/10/2011:
     - Added routine replace_substring() to text.f90
     - Updated CMake: use INCLUDE_FLAGS directly, move CMAKE_VERBOSE_MAKEFILE to CMakeLists
     
   52: 07/10/2011:
     - Added constants: one,c3rd,rc3rd, stdErr,StdIn,StdOut, hostname,username
     - Simplified definition of intkindmax, realkindmax so that they can be parameters,
       needed for declarations.  This will cause problems with g95 though, since quad
       precision is partly implemented
     - Declare func as external in root_solver() and minimum_solver()
     

******************************************************************************************
   51: 15/08/2011:  *** SF release v0.1.8 ***
     - 5003 lines of code
     
   50: 13/08/2011:
     - Use 'only' attributes with 'use' statements in modules almost everywhere, to
       ensure that only the intended variables and functions become available.
       Use with TheSky rev.388
     
   49: 30/07/2011:
     - Updated ChangeLog.txt, first bzr version
     
   48: bzr rev.48 = svn rev.47
   
   47: 17/07/2011:
     - Interpolate: fix module use; minor comment update
     
   46: 20/06/2011:
     - Added routines for linear interpolation to src/interpolate.f90
     - Updated compile flags for ifort
     
   45: 27/04/2011:
     - Added file src/command_line.f90: Procedures to handle command-line options and arguments: